# ragnostic

./: .env.template  .gitignore  ACTIONITEMS.md  LICENSE  Makefile  README.md  SOURCE_CODE.md  action_items.md  pyproject.toml  requirements-dev.txt  requirements.txt  scoping.md  test.md  test.py  test_source.md  tree.txt
docs/: 0b_ACTIONITEMS.md  1_System_Requirements.md  2_Ragnostic_Project_Plan.md  2a_Document_Ingestion.md  2b.1_DocumentExtraction_ContentExtraction_Design.md  2b.2_DocumentExtraction_Sectioning_Design.md  2b_Document_Extraction.md  2b_Semantic_Extraction.md
llm/: 1_Hierarchical RAG System Requirements.md  1_System_Requirements.md  2.md  2_Ragnostic_Project_Plan.md  2a_MVP_Ingetion_Processing.md  2b_Semantic_Chunking.md  2b_Semantic_Extraction.md  3_Document Ingestion System Technical Specification.md  4.md  8_Document_Processing_Implementation_Plan.md  README.md  file_tree.py  file_tree_to_markdown.py  filetree_src.md  task_memory.md  tree.md  tree_source.md
llm/artifacts/: DocumentID_Implementation.md  Evaluation System Technical Specification.md  ID_Manager_Refactor.md  Query Pipeline Technical Specification.md  Vector Storage Technical Specification.md
llm/context/: docs_content.md  docs_tree.md  repo_content.md  repo_tree.md  src_content.md  src_tree.md  unittest_content.md  unittest_tree.md
llm/prompts/: combine_design_documents.md  docs_alignment_prompt.md  github_merge_summary.md  implementation_chat_template.md  repo_q_and_a_system_prompt.md  scoping_system_prompt.md  (+1 more)
notebooks/: Development.ipynb  LArgeFile.ipynb  article-docling.md  article-haiku.md  article-openai.md  dev-dag-mockups.ipynb  docling-api.ipynb  document-extraction.ipynb  document-ingestion.ipynb  filetree.ipynb  journal-haiku.md  journal-openai.md  test_tree.md  textbook-openai.md
tests/: test_db.py  test_ingestion_monitor.py  test_ingestion_utils.py
(+85 files in other folders)
