[project]
name = "ragnostic"
version = "0.1.0"
description = "Diagnostic RAG system for chemical process design and techno-economic analysis"
readme = "README.md"
authors = [
    { name = "Nicholas Grundl", email = "nicholasgrundl@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ragnostic = "ragnostic:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.3.4",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]
