[project]
name = "ragnostic"
version = "0.1.0"
description = "Diagnostic RAG system for chemical process design and techno-economic analysis"
readme = "README.md"
authors = [
    { name = "Nicholas Grundl", email = "nicholasgrundl@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "brave-search>=0.1.8",
    "burr[start]>=0.37.1",
    "llama-index>=0.12.13",
    "py-zerox>=0.0.7",
    "pymupdf4llm>=0.0.17",
    "torch<2.3.0",
    "torchvision",
    "wikipedia>=1.4.0",
    "wikipedia-api>=0.8.1",
]

[project.scripts]
ragnostic = "ragnostic:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.3.4",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "wat"
]
